# aoc2023

./: Cargo.toml  rustfmt.toml  templ
days/day1/src/: main.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs  new.rs
