[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy_macro = "0.15.7"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }

[[bin]]
name = "day1"
path = "src/day1.rs"
